import Sprite from "../Sprite.js";

export default class Sprinkler extends Sprite {
    constructor(sprinklerScene, sprinklerXPosition, sprinklerYPosition, sprinklerTexture) {
        super(sprinklerScene, sprinklerXPosition, sprinklerYPosition, sprinklerTexture);
    }

}